<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save_task"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save_task"
        android:contentDescription="@string/action_save_task"
        app:showAsAction="always" />

</menu>